Fix docker-compose YAML syntax (quoted env vars)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,7 +84,7 @@ services:
     environment:
       - AGENT_REG_SECRET=dev-secret
       - ORCHESTRATOR_BASE_URL=http://backend:8000/api/v1
-      - NODE_NAME=Hospital A Agent
+      - NODE_NAME="Hospital A Agent"
       - HOSPITAL_ORG=HospitalA
       - PUBLIC_BASE_URL=http://hospital_a_agent:9001
 
@@ -105,7 +105,7 @@ services:
     environment:
       - AGENT_REG_SECRET=dev-secret
       - ORCHESTRATOR_BASE_URL=http://backend:8000/api/v1
-      - NODE_NAME=Hospital B Agent
+      - NODE_NAME="Hospital B Agent"
       - HOSPITAL_ORG=HospitalB
       - PUBLIC_BASE_URL=http://hospital_b_agent:9001
 
@@ -123,129 +123,3 @@ networks:
     name: bcfl_net
     driver: bridge
 
-"""
-
-Η πλατφόρμα αποτελείται από ξεχωριστά Docker services: 
-backend για συντονισμό, UI για αλληλεπίδραση, agents για τοπικούς υπολογισμούς, 
-lockchain για audit/consent και volumes για απομόνωση δεδομένων, 
-ώστε να υποστηρίζεται πλήρως federated learning με έμφαση στην ιδιωτικότητα.
-
-Το docker-compose λειτουργεί ως orchestrator υποδομής. 
-Δεν υλοποιεί καμία επιχειρησιακή λογική, αλλά περιγράφει 
-πώς όλα τα ανεξάρτητα Docker services — backend, UI, agents και blockchain — 
-εκκινούν, επικοινωνούν και συνυπάρχουν σε ένα ενιαίο, αναπαραγώγιμο περιβάλλον.»
-
-Ναι — ακριβώς αυτό.
-Και μπορείς να το εξηγήσεις πολύ καθαρά ως εξής:
-
-⸻
-
-Τι κάνει το docker-compose.yml
-
-Το docker-compose δεν υλοποιεί λογική εφαρμογής.
-Ο ρόλος του είναι καθαρά οργανωτικός και υποδομής.
-
-Σε μία πρόταση (απάντηση-κλειδί):
-
-«Το docker-compose ορίζει, εκκινεί και συνδέει όλα τα ανεξάρτητα services της πλατφόρμας ώστε να λειτουργούν ως ένα ενιαίο σύστημα.»
-
-⸻
-
-Πιο αναλυτικά – τι κάνει στην πράξη
-
-1. Εκκινεί όλα τα services μαζί
-
-Χωρίς docker-compose θα έπρεπε:
-	•	να χτίσεις κάθε image ξεχωριστά
-	•	να τρέξεις κάθε container με χειροκίνητα commands
-	•	να θυμάσαι ports, volumes, secrets
-
-Με docker-compose:
-
-docker-compose up
-
-και όλη η πλατφόρμα σηκώνεται.
-
-⸻
-
-2. Δημιουργεί κοινό δίκτυο (network)
-
-networks:
-  bcfl_net:
-    driver: bridge
-
-Αυτό επιτρέπει:
-	•	ui → backend
-	•	backend → agents
-	•	backend → anvil
-	•	agents → backend
-
-όλα μέσω DNS ονόματος container (π.χ. http://backend:8000).
-
-👉 Δεν χρησιμοποιούνται IPs, άρα είναι σταθερό και portable.
-
-⸻
-
-3. Συνδέει τα services λογικά
-
-Παραδείγματα:
-	•	Το UI:
-
-API_BASE_URL=http://backend:8000/api/v1
-
-	•	Οι agents:
-
-ORCHESTRATOR_BASE_URL=http://backend:8000/api/v1
-
-	•	Το backend:
-
-BC_RPC_URL=http://anvil:8545
-
-👉 Δηλαδή:
-
-«Το docker-compose καθορίζει ποιος μιλάει με ποιον και πώς.»
-
-⸻
-
-4. Επιβάλλει σειρά εκκίνησης
-
-depends_on:
-  anvil:
-    condition: service_healthy
-
-Σημαίνει:
-	•	πρώτα blockchain
-	•	μετά backend
-	•	μετά UI / agents
-
-Χωρίς αυτό, το backend θα αποτύγχανε στο startup.
-
-⸻
-
-5. Διαχωρίζει ρόλους με το ίδιο image
-
-Έχεις ένα agent image, αλλά:
-
-hospital_a_agent
-hospital_b_agent
-
-με διαφορετικά:
-	•	org
-	•	volumes
-	•	public URLs
-
-👉 Αυτό αποδεικνύει federated αρχιτεκτονική.
-
-⸻
-
-6. Ορίζει τι είναι persistent
-
-Με volumes:
-	•	DB
-	•	datasets
-
-Χωρίς docker-compose:
-	•	θα χάνονταν σε κάθε restart.
-
-
-"""
